add upb tars support.

--- a/src/main/resources/com/tencent/tars/messages.properties
+++ b/src/main/resources/com/tencent/tars/messages.properties
@@ -2,11 +2,12 @@ tars.title.general=General Tars Request
 
 # tars header panel
 tars.header.title=Target Function Config
-tars.addressing.ip=Target Servant IP
-tars.addressing.port=Target Servant Port
-tars.servant.path=Target Servant Path
-tars.func.name=Target Function Name
-tars.retval.type=Return Value Type
+tars.addressing.ip=Servant IP
+tars.addressing.port=Servant Port
+tars.addressing.protocol=Protocol
+tars.servant.path=Servant Path
+tars.func.name=Function Name
+tars.retval.type=Return value
 tars.retval.content=Return Value JSON Template
 
 # tars func parameter panel
