--- a/src/main/resources/com/tencent/tars/messages_zh_CN.properties
+++ b/src/main/resources/com/tencent/tars/messages_zh_CN.properties
@@ -2,11 +2,12 @@ tars.title.general=\u901a\u7528Tars\u8bf7\u6c42
 
 # tars header panel
 tars.header.title=Tars\u5168\u5c40\u914d\u7f6e
-tars.addressing.ip=\u88ab\u6d4b\u670d\u52a1\u5730\u5740
-tars.addressing.port=\u88ab\u6d4b\u670d\u52a1\u7aef\u53e3
-tars.servant.path=\u88ab\u6d4b\u670d\u52a1\u8def\u5f84
-tars.func.name=\u88ab\u6d4b\u63a5\u53e3\u65b9\u6cd5
-tars.retval.type=\u63a5\u53e3\u8fd4\u56de\u503c\u7c7b\u578b
+tars.addressing.ip=\u670d\u52a1\u5730\u5740
+tars.addressing.port=\u670d\u52a1\u7aef\u53e3
+tars.addressing.protocol=\u534f\u0020\u8bae
+tars.servant.path=\u670d\u52a1\u8def\u5f84
+tars.func.name=\u65b9\u6cd5\u540d\u79f0
+tars.retval.type=\u8fd4\u56de\u503c
 tars.retval.content=\u8fd4\u56de\u503cJSON\u6a21\u677f
 
 # tars func parameter panel
